overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-staging
  namespace: my-app-staging
spec:
  ingressClassName: nginx
  rules:
    - host: staging.tegarr.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 80
